[FIX] Полностью рабочий WebSocket client